# scotch-cmake

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Makefile.inc  scotch.cmake
cmake/Modules/: FindScotch.cmake
tests/: CMakeLists.txt  hello.c  hello.f90
